--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,3 +34,11 @@ compile:
   artifacts:
     paths:
       - converter
+
+release:
+  stage: deploy
+  script:
+    - curl -sfL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | sh
+    - goreleaser release --rm-dist
+  only:
+    - tags
