--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,8 +37,29 @@ compile:
 
 release:
   stage: deploy
-  script:
-    - curl -sfL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | sh
-    - ./bin/goreleaser release --rm-dist
+  image: docker:stable
+  services:
+    - docker:dind
+
+  variables:
+    DOCKER_REGISTRY: $CI_REGISTRY
+    DOCKER_USERNAME: $CI_REGISTRY_USER
+    DOCKER_PASSWORD: $CI_REGISTRY_PASSWORD
+
+    # Disable shallow cloning so that goreleaser can diff between tags to
+    # generate a changelog.
+    GIT_DEPTH: 0
+
+  # Only run this release job for tags, not every commit (for example).
   only:
-    - tags
+    refs:
+      - tags
+
+  script: |
+    docker run --rm --privileged \
+      -v $PWD:/go/src/gitlab.com/alenrig/converter \
+      -w /go/src/gitlab.com/alenrig/converter \
+      -v /var/run/docker.sock:/var/run/docker.sock \
+      -e DOCKER_USERNAME -e DOCKER_PASSWORD -e DOCKER_REGISTRY  \
+      -e GITLAB_TOKEN \
+      goreleaser/goreleaser release --rm-dist
