--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,11 +31,11 @@ release:
 
   script: |
     docker run --rm --privileged \
-      -v $PWD:/go/src/gitlab.com/alenrig/converter \
-      -w /go/src/gitlab.com/alenrig/converter \
+      -v $PWD:/go/src/${REPO_NAME} \
+      -w /go/src/${REPO_NAME} \
       -v /var/run/docker.sock:/var/run/docker.sock \
-      -e DOCKER_USERNAME -e DOCKER_PASSWORD -e DOCKER_REGISTRY  \
-      -e GITLAB_TOKEN \
+      -e $DOCKER_USERNAME -e $DOCKER_PASSWORD -e $DOCKER_REGISTRY  \
+      -e $GITLAB_TOKEN \
       goreleaser/goreleaser release --rm-dist
 
   only:
